# streamgale

./: .gitmodules  CODE_OF_CONDUCTS.md  README.md  conanfile.txt
cli/: pyproject.toml  sgale.py
design/: nimbus.md  supervisor.md  topology.md
doc/: index.html
examples/: main.cpp  wordcounter.h  wordnormalizer.h  wordreader.h
supervisor/: CMakeLists.txt  README.md  build.sh  toposerver.cpp
supervisor/.devcontainer/: Dockerfile  devcontainer.json
supervisor/.github/workflows/: build.yaml
supervisor/design/: s3_wrapper_design.md  supervisor_design.md
